--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,7 @@
 @import './styles/theme.css';
 @import './index.css';
 @import "tw-animate-css";
+@import "leaflet/dist/leaflet.css";
 /*
   ---break---
 */
